--- a/Jour06/job01/index.html
+++ b/Jour06/job01/index.html
@@ -1,17 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- CSS -->
+    <title>job 01 du Jou06 - Media Queries</title>
+
+    <!-- CSS par défaut (écran > 1920px) -->
     <link rel="stylesheet" href="style1.css">
-    <link rel="stylesheet" href="style2.css">
-    <link rel="stylesheet" href="style3.css">
-    <link rel="stylesheet" href="style4.css">
-    
-    <title>Jour06 - job01</title>
+
+    <!-- 1680px à 1920px -->
+    <link rel="stylesheet" media="screen and (min-width:1680px) and (max-width:1920px)" href="style2.css">
+
+    <!-- mon écran PC 1280px à 1680px -->
+    <link rel="stylesheet" media="screen and (min-width:1280px) and (max-width:1680px)" href="style3.css">
+
+    <!-- <1280px -->
+    <link rel="stylesheet" media="screen and (max-width:1280px)" href="style4.css">
 </head>
 <body>
-    
+
+    <h1>Job 01 - Responsive CSS</h1>
+    <p>Redimensionnez votre écran pour voir le changement de couleur.</p>
+
 </body>
 </html>
