--- a/Jour06/job01/index.html
+++ b/Jour06/job01/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
 
-    <h1>Job 01 - Responsive CSS</h1>
+    <h1>job 01 - Responsive CSS</h1>
     <p>Redimensionnez votre écran pour voir le changement de couleur.</p>
 
 </body>
