--- a/Jour06/job03/index.html
+++ b/Jour06/job03/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style06.03.css">
 
     <title>job03 du Jour06 - Responsive sections</title>
 </head>
