--- a/Jour06/job04/index.html
+++ b/Jour06/job04/index.html
@@ -4,22 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style06.04.css">
-
     <title>job04 du Jour06 - Menu Responsive</title>
 </head>
 <body>
 
     <header>
-        
-        <nav>
+
+        <!-- Bouton toggle (Burger + X) -->
+        <button class="menu-toggle" id="menuToggle" aria-label="Menu">
+            <span class="burger">&#9776;</span>
+            <span class="close">&times;</span>
+        </button>
+
+        <!-- Menu navigation -->
+        <nav id="mobileMenu">
             <ul class="nav-links">
                 <li><a href="#">Accueil</a></li>
                 <li><a href="#">Présentation</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
         </nav>
-        
-        <button class="hamburger" aria-label="Menu">&#9776;</button>
+
     </header>
 
     <main>
@@ -31,7 +36,6 @@
         <section class="section">section3</section>
         <section class="section">section4</section>
     </main>
-
 
     <script src="script06.04.js"></script>
 </body>
