fin du job04 du Jour06

--- a/Jour06/job04/index.html
+++ b/Jour06/job04/index.html
@@ -28,8 +28,11 @@
     </header>
 
     <main>
-        <h1>Menu Responsive</h1>
-        <p>Cliquer sur l'icône hamburger pour afficher/masquer le menu de navigation.</p>   
+        <section class="section-h1">
+            <h1>Menu Responsive</h1>
+            <p>Cliquer sur l'icône hamburger pour afficher/masquer le menu de navigation.</p>   
+        </section>
+            
 
         <section class="section">section1</section>
         <section class="section">section2</section>
