--- a/Jour08/index.html
+++ b/Jour08/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"> -->
     <link rel="shortcut icon" href="./assets/images/Logo-initial_ (250 x 60 px).png" type="image/x-icon">
-    <link rel="stylesheet" href="style.css">
-    <!-- <link rel="stylesheet" href="responsive2.css"> -->
-    <!-- <link rel="stylesheet" href="responsive.css"> -->
+    <link rel="stylesheet" href="style.css">   
+    <link rel="stylesheet" href="responsive.css">
+
     <title>Formulaire d'inscription</title>
    
 </head>
@@ -16,10 +16,10 @@
         <img class="Logo-initial" src="./assets/images/Logo-initial_ (250 x 60 px).png" alt="mes initial">
         <nav>
             <ul>
-                <li><a href="index.php">Accueil</a></li>
-                <li><a href="index.php">Inscription</a></li>
-                <li><a href="index.php">Connexion</a></li>
-                <li><a href="index.php">Rechercher</a></li>
+                <li><a href="index.html">Accueil</a></li>&amp;
+                <li><a href="index.html">Inscription</a></li>
+                <li><a href="index.html">Connexion</a></li>
+                <li><a href="index.html">Rechercher</a></li>
             </ul>
         </nav>
     </header>
@@ -114,10 +114,10 @@
     <footer>
         <nav>
             <ul>
-                <li><a href="index.php">Accueil</a></li>
-                <li><a href="index.php">Inscription</a></li>
-                <li><a href="index.php">Connexion</a></li>
-                <li><a href="index.php">Rechercher</a></li>
+                <li><a href="index.html">Accueil</a></li>
+                <li><a href="index.html">Inscription</a></li>
+                <li><a href="index.html">Connexion</a></li>
+                <li><a href="index.html">Rechercher</a></li>
             </ul>
         </nav>
     </footer>
