--- a/Jour08/job01/index.html
+++ b/Jour08/job01/index.html
@@ -16,7 +16,7 @@
         <img class="Logo-initial" src="./assets/images/Logo-initial_ (250 x 60 px).png" alt="mes initial">
         <nav>
             <ul>
-                <li><a href="index.html">Accueil</a></li>&amp;
+                <li><a href="index.html">Accueil</a></li>
                 <li><a href="index.html">Inscription</a></li>
                 <li><a href="index.html">Connexion</a></li>
                 <li><a href="index.html">Rechercher</a></li>
